--- a/package.json
+++ b/package.json
@@ -19,13 +19,7 @@
   "dependencies": {
     "mdx-deck": "^3.0.9",
     "nomnoml": "^0.6.1",
-    "babel-preset-react": "^6.24.1"
-  },
-  "devDependencies":
-  {
-    "babel-core": "^6.0.14",
-    "babel-loader": "^6.0.0",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "babel-preset-react": "^6.24.1",
+    "react-nomnoml": "^0.0.2"
   }
 }
