--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
   "license": "ISC",
   "dependencies": {
     "mdx-deck": "^3.0.9",
-    "nomnoml": "^0.6.1",
-    "babel-preset-react": "^6.24.1",
-    "react-nomnoml": "^0.0.2"
+    "nomnoml": "^0.6.1"
   }
 }
