--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "deck.mdx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "mdx-deck build deck.mdx",
+    "pdf": "mdx-deck pdf deck.mdx",
+    "image": "mdx-deck screenshot deck.mdx",
+    "help": "mdx-deck",
     "start": "mdx-deck deck.mdx"
   },
   "keywords": [
