--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "author": "Fab Fazreil Amreen",
   "license": "ISC",
   "dependencies": {
-    "mdx-deck": "^3.0.9",
-    "nomnoml": "^0.6.1"
+    "mdx-deck": "^4.1.1",
+    "nomnoml": "^0.6.1",
+    "typescript": "^2.8.4"
   }
 }
